[gd_scene load_steps=4 format=3 uid="uid://i1wayaok4l0h"]

[ext_resource type="Script" path="res://World/GameScene.gd" id="1_q4jsr"]
[ext_resource type="PackedScene" uid="uid://cnfkee410n10a" path="res://World/Level1.tscn" id="3_nn55m"]
[ext_resource type="PackedScene" uid="uid://ducv2awyri3mc" path="res://World/ShadowLevel1.tscn" id="4_qrg7o"]

[node name="GameScene" type="Control"]
process_mode = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_q4jsr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 1156.0
size_flags_stretch_ratio = 2.0
theme_override_constants/separation = 0

[node name="TopViewportContainer" type="SubViewportContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TopViewport" type="SubViewport" parent="VBoxContainer/TopViewportContainer"]
disable_3d = true
handle_input_locally = false
size = Vector2i(1152, 576)
render_target_update_mode = 4

[node name="Level1" parent="VBoxContainer/TopViewportContainer/TopViewport" instance=ExtResource("3_nn55m")]

[node name="Camera2D" type="Camera2D" parent="VBoxContainer/TopViewportContainer/TopViewport"]

[node name="ColorRect" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2

[node name="BottomViewportContainer" type="SubViewportContainer" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="BottomViewport" type="SubViewport" parent="VBoxContainer/BottomViewportContainer"]
disable_3d = true
handle_input_locally = false
size = Vector2i(1152, 576)
render_target_update_mode = 4

[node name="ShadowLevel1" parent="VBoxContainer/BottomViewportContainer/BottomViewport" instance=ExtResource("4_qrg7o")]

[node name="Camera2D" type="Camera2D" parent="VBoxContainer/BottomViewportContainer/BottomViewport"]
